--- a/templates/site.j2
+++ b/templates/site.j2
@@ -1,4 +1,7 @@
 server {
+{% if item.server_name is defined %}
+    server_name {{ item.server_name }};
+{% endif %}
 {% if item.ssl is defined %}
     listen {{ item.ssl.port|default(443) }} ssl;
 
