[FEAT] limit req zones

--- a/templates/site.j2
+++ b/templates/site.j2
@@ -4,6 +4,13 @@
     keepalive {{ item.upstream.keepalive}};
 }
 {% endif %}
+
+{% if item.limit_req_zones is defined %}
+{% for limit in item.limit_req_zones %}
+{{ limit }};
+{% endfor %}
+{% endif %}
+
 server {
 {% if item.server_name is defined %}
     server_name {{ item.server_name }};
