[FEAT] allow statements outside server

--- a/templates/site.j2
+++ b/templates/site.j2
@@ -10,7 +10,11 @@
 limit_req_zone {{ definition }};
 {% endfor %}
 {% endif %}
+{% if item.raw is defined %}
 
+{{item.raw}}
+
+{% endif %}
 server {
 {% if item.server_name is defined %}
     server_name {{ item.server_name }};
